// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. card default state 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 10,
        "minWidth": "100%",
      }
    }
  >
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={900}
      lowResQuality={null}
      lowResSize={25}
      uri="https://img.io/img"
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 0,
        "minWidth": "100%",
      }
    }
  >
    <Text>
      A card
    </Text>
  </View>
</View>
`;

exports[`2. card with reversed state 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "height": "auto",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 10,
        "minWidth": "100%",
      }
    }
  >
    <Text>
      A card in reverse
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 0,
        "minWidth": "100%",
      }
    }
  >
    <Image
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={900}
      lowResQuality={null}
      lowResSize={25}
      uri="https://img.io/img"
    />
  </View>
</View>
`;

exports[`3. card loading state 1`] = `
<View
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 10,
          "minWidth": "100%",
        }
      }
    >
      <Image
        aspectRatio={0.6666666666666666}
        fadeImageIn={false}
        highResSize={900}
        lowResQuality={null}
        lowResSize={25}
        uri="https://img.io/img"
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 0,
          "minHeight": 84,
          "minWidth": "100%",
        }
      }
    >
      <Gradient
        degrees={264}
        style={
          Object {
            "height": 24,
            "marginBottom": 10,
            "maxWidth": 300,
          }
        }
      />
      <Gradient
        degrees={267}
        style={
          Object {
            "height": 10,
            "marginBottom": 10,
          }
        }
      />
      <Gradient
        degrees={267}
        style={
          Object {
            "height": 10,
            "marginBottom": 10,
          }
        }
      />
      <Gradient
        degrees={267}
        style={
          Object {
            "height": 10,
            "marginBottom": 0,
            "maxWidth": 240,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`4. card reversed loading state 1`] = `
<View
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "height": "auto",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 10,
          "minHeight": 84,
          "minWidth": "100%",
        }
      }
    >
      <Gradient
        degrees={264}
        style={
          Object {
            "height": 24,
            "marginBottom": 10,
            "maxWidth": 300,
          }
        }
      />
      <Gradient
        degrees={267}
        style={
          Object {
            "height": 10,
            "marginBottom": 10,
          }
        }
      />
      <Gradient
        degrees={267}
        style={
          Object {
            "height": 10,
            "marginBottom": 10,
          }
        }
      />
      <Gradient
        degrees={267}
        style={
          Object {
            "height": 10,
            "marginBottom": 0,
            "maxWidth": 240,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 0,
          "minWidth": "100%",
        }
      }
    >
      <Image
        aspectRatio={0.6666666666666666}
        fadeImageIn={false}
        highResSize={900}
        lowResQuality={null}
        lowResSize={25}
        uri="https://img.io/img"
      />
    </View>
  </View>
</View>
`;
